допрацьовано згідно коментарів

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <a href="./index.html">
-            <span class="logo">Web</span> <span class="logo-second">Studio</span>
+            <span class="logo">Web</span><span class="logo-second">Studio</span>
             </a>
             <ul class="site-nav">
                  <li><a class="link current" href="./index.html">Студія</a></li>
@@ -33,25 +33,25 @@
                 <button class="button" type="button">Замовити послугу</button>
             </section>
         </div>
-        <section class="section"><h2 class="section-title">Переваги</h2>
+        <section class="benefit"><h2 class="benefit-title">Переваги</h2>
         <ul>
-        <li><h3 class="section-title">Увага до деталей</h3>
-            <p>
+        <li><h3 class="benefit-title">Увага до деталей</h3>
+            <p class="benefit-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
         </li>
-        <li><h3 class="section-title">Пунктуальність</h3>
-            <p>
+        <li><h3 class="benefit-title">Пунктуальність</h3>
+            <p class="benefit-text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
         </li>
-        <li><h3 class="section-title">Планування</h3>
-            <p>
+        <li><h3 class="benefit-title">Планування</h3>
+            <p class="benefit-text">
                 Так само консультація з широким активом значною мірою зумовлює.
             </p>
         </li>
-        <li><h3 class="section-title">Сучасні технології</h3>
-            <p>
+        <li><h3 class="benefit-title">Сучасні технології</h3>
+            <p class="benefit-text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
         </li>
@@ -65,29 +65,29 @@
             </ul>
         </section>
                
-          <section class="section">
-            <h2 class="section-title">Наша команда</h2>
+          <section>
+            <h2 class="team">Наша команда</h2>
             <ul>
                 <li>
                     <img src="./images/vykl1.jpg" alt="Ігор Демʼяненко" width="270" height="260"/>
-                    <h3 class="section-title">Ігор Демʼяненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-title">Ігор Демʼяненко</h3>
+                    <p class="team-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/vykl2.jpg" alt="Ольга Рєпіна" width="270" height="260" />
-                    <h3 class="section-title">Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-title">Ольга Рєпіна</h3>
+                    <p class="team-text">Frontend Developer</p>
                 </li>
                 <li>
                   <img src="./images/vykl3.jpg" alt="Микола Тарасов" width="270" height="260" />
-                  <h3 class="section-title">Микола Тарасов</h3>
-                  <p>Marketing</p>
+                  <h3 class="team-title">Микола Тарасов</h3>
+                  <p class="team-text">Marketing</p>
                 
                 </li>
                 <li>
                     <img src="./images/vykl4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
-                    <h3 class="section-title">Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-title">Михайло Єрмаков</h3>
+                    <p class="team-text">UI Designer</p>
                 </li>
             </ul>
           </section>
