--- a/portfolio.html
+++ b/portfolio.html
@@ -13,12 +13,12 @@
     <header>
         <nav>
             <a href="./index.html">
-            <span class="logo">Web</span> <span class="logo-second">Studio</span>
+            <span class="logo">Web</span><span class="logo-second">Studio</span>
             </a>
 
             <ul class="site-nav">
-                 <li><a class="link current" href="./index.html">Студія</a></li>
-                 <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
+                 <li><a class="link" href="./index.html">Студія</a></li>
+                 <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
                  <li><a class="link" href="">Контакти</a></li>
             </ul>
         </nav>      
@@ -31,60 +31,56 @@
         <section>
             <h1>Навігація вкладок</h1>
             <ul>
-                <li> <button type="button"> Усі</button></li>
-                <li> <button type="button">Веб-сайти</button></li>
-                <li> <button type ="button">Додатки</button></li>
-                <li> <button type ="button">Дизайн</button></li>
-                <li> <button type ="button">Маркетинг</button></li>
-            </ul>
-        </section>
-        <section class="section">
-            <h2>Перелік додатків та посилань</h2>
-            <ul>
-                <li> <a href="">посилання на Технокряк</a>
-                    <img src="./images/img-11.jpg" alt="Технокряк" width="370">
-                    <h3 class="section-title">Технокряк</h3>
-                    <p>Веб-сайт</p>
+                <li><button class="but-nav" type="button">Усі</button></li>
+                <li><button class="but-nav" type ="button">Маркетинг</button></li>
+                <li><button class="but-nav" type="button">Веб-сайти</button></li>
+                <li><button class="but-nav" type ="button">Додатки</button></li>
+                <li><button class="but-nav" type ="button">Дизайн</button></li>
+                 <h1>Перелік додатків та посилань</h1>
+                <li> <a href="">посилання на Технокряк
+                        <img src="./images/img-11.jpg" alt="Технокряк" width="370">
+                        <h2 class="port-link">Технокряк</h2>
+                        <p class="port-link-text">Веб-сайт</p></a>
                 </li>
-                <li> <a href="">посилання на Постер</a>
-                    <img src="./images/img-2.jpg" alt="Постер" width="370">
-                    <h3 class="section-title">Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                <li> <a href="">посилання на Постер
+                        <img src="./images/img-2.jpg" alt="Постер" width="370">
+                        <h2 class="port-link">Постер New Orlean vs Golden Star</h2>
+                        <p class="port-link-text">Дизайн</p></a>
                 </li>
-                <li> <a href="">посилання на Ресторан </a>
-                    <img src="./images/img-33.jpg" alt="Ресторан" width="370">
-                    <h3 class="section-title">Ресторан Seafood </h3>
-                    <p>Додаток</p>
+                <li> <a href="">посилання на Ресторан
+                         <img src="./images/img-33.jpg" alt="Ресторан" width="370">
+                         <h2 class="port-link">Ресторан Seafood </h2>
+                         <p class="port-link-text">Додаток</p></a>
                 </li>
-                <li> <a href="">посилання на Проєкт</a>
-                    <img src="./images/img-4.jpg" alt="Проєкт" width="370">
-                    <h3 class="section-title">Проєкт Prime</h3>
-                    <p>Маркетинг</p>
+                <li> <a href="">посилання на Проєкт
+                        <img src="./images/img-4.jpg" alt="Проєкт" width="370">
+                         <h2 class="port-link">Проєкт Prime</h2>
+                         <p class="port-link-text">Маркетинг</p></a>
                 </li>
-                <li> <a href=""> посилання на Проєкт </a>
-                    <img src="./images/img-5.jpg" alt="Проєкт" width="370">
-                    <h3 class="section-title">Проєкт Boxes</h3>
-                    <p>Додаток</p>
+                <li> <a href=""> посилання на Проєкт 
+                        <img src="./images/img-5.jpg" alt="Проєкт" width="370">
+                         <h2 class="port-link">Проєкт Boxes</h2>
+                        <p class="port-link-text">Додаток</p></li>a>
                 </li>
-                <li> <a href=""> Посилання на Inspiration </a>
+                <li> <a href=""> Посилання на Inspiration 
                     <img src="./images/img-6.jpg" alt="Inspiration" width="370">
-                    <h3 class="section-title">Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                    <h2 class="port-link">Inspiration has no Borders</h2>
+                    <p class="port-link-text">Веб-сайт</p></a>
                 </li>
-                <li><a href="">посилання на Видання</a>
+                <li><a href="">посилання на Видання
                     <img src="./images/img-7.jpg" alt="Видання" width="370">
-                    <h3 class="section-title">Видання Limited Edition</h3>
-                    <p>Дизайн</p>
+                    <h2 class="port-link">Видання Limited Edition</h2>
+                    <p class="port-link-text">Дизайн</p></a>
                 </li>
-                <li> <a href=""> Посилання на Проєкт</a>
+                <li> <a href=""> Посилання на Проєкт
                     <img src="./images/img-8.jpg" alt="Проєкт" width="370">
-                    <h3 class="section-title">Проєкт LAB</h3>
-                    <p>Маркетинг</p>
+                    <h2 class="port-link">Проєкт LAB</h2>
+                    <p class="port-link-text">Маркетинг</p></a>
                 </li>
-                <li><a href="">Посилання на Growing </a>
+                <li><a href="">Посилання на Growing
                     <img src="./images/img-9.jpg" alt="Growing" width="370">
-                    <h3 class="section-title">Growing Business</h3>
-                    <p>Додаток</p>
+                    <h2 class="port-link">Growing Business</h2>
+                    <p class="port-link-text">Додаток</p></a>
                 </li>  
             </ul>
         </section>
@@ -95,10 +91,10 @@
                 <span class="logo">Web</span><span class="logo-third">Studio</span>
             </a>
             <address>
-            <ul class="contacts">
-                <li class="contacts-geoadress"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a>  </li>
-                <li class="contacts-adress"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="contacts-adress"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="footer-contacts">
+                <li class="footer-geoadress"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a>  </li>
+                <li class="footer-adress"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="footer-adress"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
             </address>
           
