--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                  <li><a class="link" href="">Контакти</a></li>
             </ul>
         </nav>      
-        <ul class="contacts">
-            <li class="contacts-adress"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contacts-adress"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul>
+            <li><a href="mailto:info@devstudio.com" class="contacts-adress">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111"  class="contacts-adress">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -98,10 +98,10 @@
                 <span class="logo">Web</span><span class="logo-third">Studio</span>
             </a>
             <address>
-            <ul class="contacts">
-                <li class="contacts-geoadress"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a>  </li>
-                <li class="contacts-adress"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="contacts-adress"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul>
+                <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank"  rel="noopener noreferrer" class="footer-geoadress">м. Київ, пр-т Лесі Українки, 26</a>  </li>
+                <li><a href="mailto:info@devstudio.com"  class="contacts-adress">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="contacts-adress">+38 096 111 11 11</a></li>
             </ul>
             </address>
           
