--- a/portfolio.html
+++ b/portfolio.html
@@ -15,16 +15,15 @@
             <a href="./index.html">
             <span class="logo">Web</span><span class="logo-second">Studio</span>
             </a>
-
             <ul class="site-nav">
-                 <li><a class="link" href="./index.html">Студія</a></li>
-                 <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
-                 <li><a class="link" href="">Контакти</a></li>
+                 <li><a href="./index.html" class="link" >Студія</a></li>
+                 <li><a href="./portfolio.html" class="link current" >Портфоліо</a></li>
+                 <li><a href=""class="link">Контакти</a></li>
             </ul>
         </nav>      
-        <ul class="contacts">
-            <li class="contacts-adress"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contacts-adress"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul>
+            <li><a class="contacts-adress" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contacts-adress" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -37,47 +36,47 @@
                 <li><button class="but-nav" type ="button">Додатки</button></li>
                 <li><button class="but-nav" type ="button">Дизайн</button></li>
                  <h1>Перелік додатків та посилань</h1>
-                <li> <a href="">посилання на Технокряк
+                <li> <a href="" class="port">посилання на Технокряк
                         <img src="./images/img-11.jpg" alt="Технокряк" width="370">
                         <h2 class="port-link">Технокряк</h2>
                         <p class="port-link-text">Веб-сайт</p></a>
                 </li>
-                <li> <a href="">посилання на Постер
+                <li> <a href="" class="port">посилання на Постер
                         <img src="./images/img-2.jpg" alt="Постер" width="370">
                         <h2 class="port-link">Постер New Orlean vs Golden Star</h2>
                         <p class="port-link-text">Дизайн</p></a>
                 </li>
-                <li> <a href="">посилання на Ресторан
+                <li> <a href="" class="port">посилання на Ресторан
                          <img src="./images/img-33.jpg" alt="Ресторан" width="370">
                          <h2 class="port-link">Ресторан Seafood </h2>
                          <p class="port-link-text">Додаток</p></a>
                 </li>
-                <li> <a href="">посилання на Проєкт
+                <li> <a href="" class="port">посилання на Проєкт
                         <img src="./images/img-4.jpg" alt="Проєкт" width="370">
                          <h2 class="port-link">Проєкт Prime</h2>
                          <p class="port-link-text">Маркетинг</p></a>
                 </li>
-                <li> <a href=""> посилання на Проєкт 
+                <li> <a href="" class="port"> посилання на Проєкт 
                         <img src="./images/img-5.jpg" alt="Проєкт" width="370">
                          <h2 class="port-link">Проєкт Boxes</h2>
                         <p class="port-link-text">Додаток</p></li>a>
                 </li>
-                <li> <a href=""> Посилання на Inspiration 
+                <li> <a href="" class="port"> Посилання на Inspiration 
                     <img src="./images/img-6.jpg" alt="Inspiration" width="370">
                     <h2 class="port-link">Inspiration has no Borders</h2>
                     <p class="port-link-text">Веб-сайт</p></a>
                 </li>
-                <li><a href="">посилання на Видання
+                <li><a href="" class="port">посилання на Видання
                     <img src="./images/img-7.jpg" alt="Видання" width="370">
                     <h2 class="port-link">Видання Limited Edition</h2>
                     <p class="port-link-text">Дизайн</p></a>
                 </li>
-                <li> <a href=""> Посилання на Проєкт
+                <li> <a href="" class="port"> Посилання на Проєкт
                     <img src="./images/img-8.jpg" alt="Проєкт" width="370">
                     <h2 class="port-link">Проєкт LAB</h2>
                     <p class="port-link-text">Маркетинг</p></a>
                 </li>
-                <li><a href="">Посилання на Growing
+                <li><a href="" class="port">Посилання на Growing
                     <img src="./images/img-9.jpg" alt="Growing" width="370">
                     <h2 class="port-link">Growing Business</h2>
                     <p class="port-link-text">Додаток</p></a>
@@ -91,13 +90,12 @@
                 <span class="logo">Web</span><span class="logo-third">Studio</span>
             </a>
             <address>
-            <ul class="footer-contacts">
-                <li class="footer-geoadress"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a>  </li>
-                <li class="footer-adress"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="footer-adress"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul>
+                <li><a class="footer-geoadress" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank"  rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a>  </li>
+                <li><a class="footer-adress" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="footer-adress" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
             </address>
-          
         </div>
     </footer>
 </body>
