виправлено згідно правок

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">
+            <a class="studio" href="./index.html">
             <span class="logo">Web</span><span class="logo-second">Studio</span>
             </a>
             <ul class="site-nav">
@@ -86,7 +86,7 @@
     </main>
     <footer class="footer">
         <div>
-            <a href="./index.html">
+            <a class="studio" href="./index.html">
                 <span class="logo">Web</span><span class="logo-third">Studio</span>
             </a>
             <address>
