--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <div>
-            <section>
+            <section class="hero-main">
                 <h1 class="hero">Ефективніші рішення для вашого бізнесу</h1>
                 <button class="button" type="button">Замовити послугу</button>
             </section>
@@ -59,9 +59,9 @@
         </section>
         <section class="section"><h2 class="section-title"> Чим ми займаємося</h2>
             <ul>
-               <li> <img src="./images/img-1.jpg" alt="Розробка" width="370" height="294"/> </li>
-               <li> <img src="./images/img-2-2.jpg" alt="Дизайн" width="370" height="294"/></li>
-               <li> <img src="./images/img-3.jpg" alt="Запуск вашого проекта" width="370" height="294"/></li>
+               <li> <img class="section-img" src="./images/img-1.jpg" alt="Розробка" width="370" height="294"/> </li>
+               <li> <img class="section-img" src="./images/img-2-2.jpg" alt="Дизайн" width="370" height="294"/></li>
+               <li> <img class="section-img" src="./images/img-3.jpg" alt="Запуск вашого проекта" width="370" height="294"/></li>
             </ul>
         </section>
                
@@ -69,23 +69,23 @@
             <h2 class="team">Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/vykl1.jpg" alt="Ігор Демʼяненко" width="270" height="260"/>
+                    <img class="team-img" src="./images/vykl1.jpg" alt="Ігор Демʼяненко" width="270" height="260"/>
                     <h3 class="team-title">Ігор Демʼяненко</h3>
                     <p class="team-text">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/vykl2.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+                    <img class="team-img" src="./images/vykl2.jpg" alt="Ольга Рєпіна" width="270" height="260" />
                     <h3 class="team-title">Ольга Рєпіна</h3>
                     <p class="team-text">Frontend Developer</p>
                 </li>
                 <li>
-                  <img src="./images/vykl3.jpg" alt="Микола Тарасов" width="270" height="260" />
+                  <img class="team-img" src="./images/vykl3.jpg" alt="Микола Тарасов" width="270" height="260" />
                   <h3 class="team-title">Микола Тарасов</h3>
                   <p class="team-text">Marketing</p>
                 
                 </li>
                 <li>
-                    <img src="./images/vykl4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+                    <img class="team-img" src="./images/vykl4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
                     <h3 class="team-title">Михайло Єрмаков</h3>
                     <p class="team-text">UI Designer</p>
                 </li>
