--- a/portfolio.html
+++ b/portfolio.html
@@ -36,47 +36,47 @@
                 <li><button class="but-nav" type ="button">Додатки</button></li>
                 <li><button class="but-nav" type ="button">Дизайн</button></li>
                  <h1>Перелік додатків та посилань</h1>
-                <li> <a href="" class="port">посилання на Технокряк
+                <li> <a href="" class="port">
                         <img src="./images/img-11.jpg" alt="Технокряк" width="370">
                         <h2 class="port-link">Технокряк</h2>
                         <p class="port-link-text">Веб-сайт</p></a>
                 </li>
-                <li> <a href="" class="port">посилання на Постер
+                <li> <a href="" class="port"
                         <img src="./images/img-2.jpg" alt="Постер" width="370">
                         <h2 class="port-link">Постер New Orlean vs Golden Star</h2>
                         <p class="port-link-text">Дизайн</p></a>
                 </li>
-                <li> <a href="" class="port">посилання на Ресторан
+                <li> <a href="" class="port">
                          <img src="./images/img-33.jpg" alt="Ресторан" width="370">
                          <h2 class="port-link">Ресторан Seafood </h2>
                          <p class="port-link-text">Додаток</p></a>
                 </li>
-                <li> <a href="" class="port">посилання на Проєкт
+                <li> <a href="" class="port">
                         <img src="./images/img-4.jpg" alt="Проєкт" width="370">
                          <h2 class="port-link">Проєкт Prime</h2>
                          <p class="port-link-text">Маркетинг</p></a>
                 </li>
-                <li> <a href="" class="port"> посилання на Проєкт 
+                <li> <a href="" class="port"> 
                         <img src="./images/img-5.jpg" alt="Проєкт" width="370">
                          <h2 class="port-link">Проєкт Boxes</h2>
                         <p class="port-link-text">Додаток</p></li>a>
                 </li>
-                <li> <a href="" class="port"> Посилання на Inspiration 
+                <li> <a href="" class="port">
                     <img src="./images/img-6.jpg" alt="Inspiration" width="370">
                     <h2 class="port-link">Inspiration has no Borders</h2>
                     <p class="port-link-text">Веб-сайт</p></a>
                 </li>
-                <li><a href="" class="port">посилання на Видання
+                <li><a href="" class="port">
                     <img src="./images/img-7.jpg" alt="Видання" width="370">
                     <h2 class="port-link">Видання Limited Edition</h2>
                     <p class="port-link-text">Дизайн</p></a>
                 </li>
-                <li> <a href="" class="port"> Посилання на Проєкт
+                <li> <a href="" class="port">
                     <img src="./images/img-8.jpg" alt="Проєкт" width="370">
                     <h2 class="port-link">Проєкт LAB</h2>
                     <p class="port-link-text">Маркетинг</p></a>
                 </li>
-                <li><a href="" class="port">Посилання на Growing
+                <li><a href="" class="port">
                     <img src="./images/img-9.jpg" alt="Growing" width="370">
                     <h2 class="port-link">Growing Business</h2>
                     <p class="port-link-text">Додаток</p></a>
